# swig_templates

./: CMakeLists.txt  LICENSE  README.md
include/malanore/: c_api.h
src/: c_api.cpp  main.cpp  ot.cpp
swig/: malanore.i
